fix scoll icon overwrapped with text

--- a/src/client/2016/css/style.css
+++ b/src/client/2016/css/style.css
@@ -139,7 +139,7 @@ section.dark {
 }
 
 #breadcrumb {
-  min-height: 740px;
+  min-height: 830px;
   height: 80%;
   padding-top: 200px;
   padding-bottom: 0;
